k8s/backend-resources/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: mean-stack
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: backend
   #  imagePullSecrets:
      # - name: registry-secret
      containers:
      - name: backend-cont
        image: venkat14489/crud-backend:latest
        imagePullPolicy: Always
        ports:
           - containerPort: 8080
        securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop: ["ALL"]
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
         tcpSocket:
           port: 8080
         initialDelaySeconds: 10
         periodSeconds: 15
        resources:
         requests:
           cpu: "50m"
           memory: "100Mi"
         limits:
           cpu: "100m"
           memory: "150Mi"
