k8s/backend-resources/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mean-stack
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
